assets/src/css/scss/_timeline.scss
.tml {
  @include border-box;

  max-width: 980px;
  padding-left: 13px;
  padding-right: 96px;
  padding-top: 215px;
  padding-bottom: 220px;
  overflow: hidden;
  margin: 0 auto;
  position: relative;
  font-family: 'Trim', Helvetica Neue, Helvetica, Arial;

  &.tml_highlight .tml__section {
    opacity: 0.3;
  }
  &.tml_highlight .tml__section_highlight {
    opacity: 1;
  }
}

.tml__month-wrap {
  position: relative;
  z-index: 10;
  border-right: 1px solid #fff;
}

.tml__section {
  @include border-box;

  width: 8.21%;
  //max-width: 71px;
  float: left;
  height: 25px;
  position: relative;
  cursor: pointer;

  @include transition(all, 0.4s, ease-in-out);

  &.tml__section_highlight .tml__month-wrap {
    //opacity: 0.5 !important;
    //box-shadow: 0 0 10px #000;
  }

  &.tml__section_gray {
    background-color: $color-gray;
  }

  &.tml__section_blue {
    background-color: $color-blue;
    color: $color-blue;

    &.tml__section_corner:before {
        @include corner($color-blue);
    }
  }

  &.tml__section_green {
    background-color: $color-green;
  }

  &.tml__section_yellow {
    background-color: $color-yellow;
    color: $color-yellow;

    &.tml__section_corner:before {
      @include corner($color-yellow);
    }
  }

  &.tml__section_grad {
    background-image: url(#{$img-path}grad-bg.png);
    background-repeat: repeat-x;
    color: $color-green;

    &.tml__section_corner:before {
      @include corner($color-green);
    }
  }

  &.tml__section_start-line {
    &:after {
      content: "";
      width: 5px;
      height: 44px;
      background-color: $color-dark-blue;
      position: absolute;
      right: 22%;
      top: -6px;
    }
  }

  &.tml__section_corner {
    &:before {
      content: "";
      position: absolute;
      left: 5px;
      bottom: -3px;
    }
  }

  &:last-of-type:after {
    content: "";
    background-color: $color-dark-blue;
    height: 1px;
    width: 100px;
    right: -100px;
    top: 50%;
    position: absolute;
    margin-top: -1px;
  }
}


.tml__month {
  color: #fff;
  display: block;
  font-size: 10px;
  padding-top: 14px;
  padding-left: 7px;

  &.tml__month_mobile { display: none; }
}

.tml__year {
  width: 26px;
  height: 14px;
  background-color: $color-dark-blue;
  text-align: center;
  line-height: 14px;
  color: #fff;
  display: block;
  font-size: 10px;
  position: absolute;

  &.tml__year_prev {
    top: 199px;
    left: 13px;
  }

  &.tml__year_next {
    top: 209px;
    right: 65px;
  }
}

.tml__text {
  color: inherit;
  font-size: 16px;
  white-space: nowrap;
  margin: 6px 0 0;
  font-weight: 500;
  background: #fff;
  position: relative;
  z-index: 6;
  padding: 2px 0;

  // to extend white background
  width: 165px;

  &.tml__text_14 { font-size: 14px }

  &.tml__text_small {
    font-size: 10px;
    padding-left: 2px;
    display: inline-block;
    margin-top: 0;
    position: relative;
    top: -1px;
    font-weight: 300;
  }

  &.tml__text_wrap {
    padding-left: 0;
    top: 0;
    display: block;
    margin-top: -5px;
  }

  &.tml__text_mobile {
    display: none;
  }
}

.tml__strategy {
  color: $color-dark-blue;
  position: absolute;
  right: 15px;
  font-size: 11px;
  top: 231px;
  z-index: 8;
}

.tml__hover-area {
  position: absolute;
  top: 0;
  width: 75%;
  left: 12.5%;
  height: 127px;
}
/* ... */

